--- a/KosaESS/src/main/resources/templates/admin/select_subject_popup.html
+++ b/KosaESS/src/main/resources/templates/admin/select_subject_popup.html
@@ -12,44 +12,46 @@
 
 	<div class="select_wrap">
 		<div class="search_wrap">
-			<input class="search_input" type="text" placeholder="과목명을 입력하세요.">
-			<button class="search_btn">조회</button>
+			<input class="search_input" type="text" placeholder="과목명을 입력하세요." onkeyup="if(window.event.keyCode==13){search()}"
+				autofocus>
+			<button class="search_btn" onclick="search()">조회</button>
 		</div>
+
+		<!-- 총 개수 및 버튼-->
+		<div class="content_info_wrap">
+			<div style="margin-left: 5px;">
+				총 <span class="cnt subject_cnt"
+					th:text="${#lists.size(subjectList)}"></span> 건
+			</div>
+			<div class="content_info_button_wrap">
+				<button class="insert_btn" type="button"
+					onclick="showInsertSubjectPopup()">
+					<img th:src="@{/img/plus_white.png}">등록하기
+				</button>
+				<button id="subject_delete_btn">
+					<img th:src="@{/img/minus_white.png}"> <span>선택삭제</span>
+				</button>
+
+				<button id="subject_update_btn" onclick="enterSubjectEditMode()">
+					<img th:src="@{/img/update_white.png}"> <span>수정하기</span>
+				</button>
+
+				<button id="subject_cancel_btn" onclick="cancelSubjectEditMode()"
+					style="display: none;">
+					<img th:src="@{/img/x_white.png}"> <span>수정취소</span>
+				</button>
+
+				<button id="subject_save_btn" onclick="saveSubject()"
+					style="display: none;">
+					<img th:src="@{/img/save_white.png}"> <span>저장하기</span>
+				</button>
+			</div>
+		</div>
+		<!-- 총 개수 및 버튼-->
+
 		<div class="company_list_wrap">
-
 			<!-- 과목 관리 -->
-			<div class="subject_wrap" style="height: 50%;">
-				<!-- 총 개수 및 버튼-->
-				<div class="content_info_wrap">
-					<div style="margin-left: 5px;">
-						총 <span class="cnt subject_cnt"
-							th:text="${#lists.size(subjectList)}"></span> 건
-					</div>
-					<div class="content_info_button_wrap">
-						<button class="insert_btn" type="button" onclick="insertSubject()">
-							<img th:src="@{/img/plus_white.png}">등록하기
-						</button>
-						<button id="subject_delete_btn">
-							<img th:src="@{/img/minus_white.png}"> <span>선택삭제</span>
-						</button>
-
-						<button id="subject_update_btn" onclick="enterSubjectEditMode()">
-							<img th:src="@{/img/update_white.png}"> <span>수정하기</span>
-						</button>
-
-						<button id="subject_cancel_btn" onclick="cancelSubjectEditMode()"
-							style="display: none;">
-							<img th:src="@{/img/x_white.png}"> <span>수정취소</span>
-						</button>
-
-						<button id="subject_save_btn" onclick="saveSubject()"
-							style="display: none;">
-							<img th:src="@{/img/save_white.png}"> <span>저장하기</span>
-						</button>
-					</div>
-				</div>
-				<!-- 총 개수 및 버튼-->
-
+			<div class="subject_wrap" style="height: 100%;">
 				<!-- 리스트 -->
 				<div class="table_wrap subject_table">
 					<table>
@@ -63,18 +65,17 @@
 							</tr>
 						</thead>
 						<tbody class="subject_tbody">
-							<tr class="tr_subject" 
+							<tr class="tr_subject"
 								th:each="subject, iterStat : ${subjectList}">
 								<td class="td_subject_check_box"><input type="checkbox"
 									name="subject_select" onclick="subjectCheckSelectAll()"
 									class="subject_checkbox_item" th:value="${subject.sbjtId}">
 									<input type="hidden" class="subject_update_yn" value="N">
 								</td>
-								<td class="td_subject_num"
-									th:text="${iterStat.index+1}"></td>
-								<td class="td_subject_nm"><span class="subject_span"  onclick="selectSubject(this)"
-									th:text="${subject.sbjtNm}"></span> <input
-									style="display: none;" type="text"
+								<td class="td_subject_num" th:text="${iterStat.index+1}"></td>
+								<td class="td_subject_nm"><span class="subject_span"
+									onclick="selectSubject(this)" th:text="${subject.sbjtNm}"></span>
+									<input style="display: none;" type="text"
 									class="subject_input subject_nm" th:value="${subject.sbjtNm}">
 								</td>
 							</tr>
@@ -109,6 +110,99 @@
 				sbjtNm : sbjtNm
 			}, "*");
 			window.close(); // 팝업 창 닫기
+		}
+		
+		//과목 검색하기
+		function search(){
+			var sbjtNm = document.querySelector(".search_input").value;
+			
+			$.ajax({
+				url: '/admin/subject/search',
+				method: 'GET',
+				data : {
+					sbjtNm:sbjtNm
+				},
+				success : function(response){
+					var subjectList = response.subjectList;
+					
+					//tbody 비우기
+					const subjectTbody = document.querySelector('.subject_tbody');
+					$('.subject_tbody').empty();
+					
+					//subject cnt 변경
+					var subjectCnt = document.querySelector('.subject_cnt');
+					subjectCnt.textContent = subjectList.length;
+					
+					//리스트 채우기 for문
+					for(var i=0; i<subjectList.length; i++){
+						var subject = subjectList[i];
+						
+						var tr = document.createElement('tr');
+						
+						var tdCheck = document.createElement('td');
+						tdCheck.className="td_subject_check_box";
+						var inputCheck = document.createElement('input');
+						inputCheck.type="checkbox";
+						inputCheck.name="subject_select";
+						inputCheck.onclick = function(){
+							subjectCheckSelectAll();
+						}
+						inputCheck.className = "subject_checkbox_item";
+						inputCheck.value=subject.sbjtId;
+						var inputHidden = document.createElement('input');
+						inputHidden.type="hidden";
+						inputHidden.className="subject_update_yn";
+						inputHidden.value="N";
+						tdCheck.appendChild(inputCheck);
+						tdCheck.appendChild(inputHidden);
+						tr.appendChild(tdCheck);
+						
+						var tdNum = document.createElement('td');
+						tdNum.className = "td_subject_num";
+						tdNum.textContent = i+1;
+						tr.appendChild(tdNum);
+						
+						var tdSubjectNm = document.createElement('td');
+						tdSubjectNm.className = "td_subject_nm";
+						var spanSubjectNm = document.createElement('span');
+						spanSubjectNm.className ="subject_span";
+						spanSubjectNm.textContent = subject.sbjtNm;
+						spanSubjectNm.onclick = function(){
+							selectSubject(this);
+						}
+						var inputSubjectNm = document.createElement('input');
+						inputSubjectNm.style.display ='none';
+						inputSubjectNm.type="text";
+						inputSubjectNm.className="subject_input subject_nm";
+						inputSubjectNm.value=subject.sbjtNm;
+						tdSubjectNm.appendChild(spanSubjectNm);
+						tdSubjectNm.appendChild(inputSubjectNm);	
+						tr.appendChild(tdSubjectNm);
+					
+						subjectTbody.appendChild(tr);
+					}
+					
+					//과목 input에 수정 발생시 해당 tr update_yn = Y로 변경하는 이벤트
+					var subjectInputs = document.querySelectorAll(".subject_input");
+					subjectInputs.forEach(function(subjectInput) {
+					    // onchange 이벤트를 추가합니다.
+					    subjectInput.addEventListener("change", function() {
+					    	const parentTr = subjectInput.closest('tr');
+					    	var updateYnInput = parentTr.querySelector(".td_subject_check_box .subject_update_yn");
+					    	updateYnInput.value = "Y";
+					    });
+					});
+				}
+			});
+		}
+		
+		//과목 등록하기 버튼(팝업 띄우기)
+		var popup;
+		function showInsertSubjectPopup(){
+			popup = window.open(
+					"/admin/subject/insert", "과목 등록 팝업", 
+					"width=500, height=170, left=800, top=400"		
+			);
 		}
 		
 		//과목 전체선택
