[eunji][#update]강의 페이징 처리 완료했숩니데이

--- a/KosaESS/src/main/resources/templates/include/manager_subbar.html
+++ b/KosaESS/src/main/resources/templates/include/manager_subbar.html
@@ -42,7 +42,7 @@
 						관리</span>
 			</a> <span class="tooltip">기업 관리</span></li>
 			<li><a class="icon_img"
-				th:href="@{/__${session.role}__/lecture/list}"> <i
+				th:href="@{/__${session.role}__/lecture/list/1}"> <i
 					class='bx bx-cart-alt'><img th:src="@{/img/lecture_white.png}"></i>
 					<span class="links_name">강의 관리</span>
 			</a> <span class="tooltip">강의 관리</span></li>
