--- a/KosaESS/src/main/resources/templates/admin/lecture_list.html
+++ b/KosaESS/src/main/resources/templates/admin/lecture_list.html
@@ -22,7 +22,7 @@
 			<!-- Route -->
 			<div class="route">
 				<a th:href="@{/admin}">대시보드</a> > <a
-					th:href="@{/admin/lecture/list}">강의 관리</a>
+					th:href="@{/admin/lecture/list/1}">강의 관리</a>
 			</div>
 		</div>
 		<!-- Content Top -->
@@ -187,6 +187,23 @@
 			<!-- 강의 관리 -->
 		</div>
 		<!-- Content Middle-->
+		
+		<!-- Paging -->
+		<nav class="page_nav" aria-label="Page navigation">
+			<ul class="pagination">
+				<li th:if="${nowPageBlock>1}"><a
+					th:href="@{/admin/lecture/list/__${startPage-1}__}"
+					aria-label="Previous">이전</a></li>
+
+				<li th:each="i: ${#numbers.sequence(startPage, endPage)}"
+					th:classappend="${i==nowPage}?active"><a
+					th:href="@{/admin/lecture/list/__${i}__}">[[${i}]]</a></li>
+
+				<li th:if="${nowPageBlock<totalPageBlock}"><a
+					th:href="@{/admin/lecture/list/__${endPage+1}__}" aria-label="Next">다음</a></li>
+			</ul>
+		</nav>
+		<!-- Paging -->
 	</div>
 	<script>
 	//강의 전체선택
@@ -314,7 +331,7 @@
 												console.log(response);
 												if (response == "success") {
 													alert("선택한 강의가 삭제되었습니다.");
-													window.location.href = "/admin/lecture/list";
+													window.location.href = "/admin/lecture/list/1";
 												}
 											}
 										});
@@ -480,7 +497,7 @@
 				        
 				        alert("강의가 수정되었습니다.");
 				        //강의 리스트 다시 불러오기
-				        location.href='/admin/lecture/list';
+				        location.href='/admin/lecture/list/1';
 				    } else {
 				    	alert("실패했습니다. 다시 시도해주세요.");
 				    }
