--- a/KosaESS/src/main/resources/templates/admin/notice_list.html
+++ b/KosaESS/src/main/resources/templates/admin/notice_list.html
@@ -88,6 +88,7 @@
 						onclick="location.href='/excel/admin/notice'">
 						<img th:src="@{/img/excel.png}"><span>엑셀</span>
 					</button>
+					<!-- 엑셀 다운로드 버튼 -->
 
 					<!-- 선택삭제 버튼 -->
 					<button type="button" id="delete_btn">
