--- a/KosaESS/src/main/resources/templates/admin/student_form.html
+++ b/KosaESS/src/main/resources/templates/admin/student_form.html
@@ -179,7 +179,7 @@
 			<button class="cancel_btn" style="display:none;" onclick="cancelBtn()">취소</button>
 			<button class="save_btn" style="display:none;" onclick="saveBtn()">저장</button>
 			<button class="update_btn" onclick="updateStudent()">수정</button>
-			<button class="list_btn" onclick="location.href ='/admin/student/list'">목록</button>
+			<button class="list_btn" onclick="location.href ='/admin/student/list/1'">목록</button>
 		</div>
 		<!-- Content Middle-->
 	</div>
