--- a/KosaESS/src/main/resources/static/css/admin/dashboard.css
+++ b/KosaESS/src/main/resources/static/css/admin/dashboard.css
@@ -27,30 +27,30 @@
 }
 
 .bx_wait_wrap {
-	display:flex;
+	display: flex;
 }
 
 .bx_wait_wrap .bx_wait {
-	border:2px solid black;
+	border: 2px solid black;
 	width: 40%;
 	height: 300px;
-	margin:20px;
+	margin: 20px;
 	padding: 20px;
 	text-align: center;
-	font-weight:bold;
+	font-weight: bold;
 }
 
 .bx_wait_wrap .bx_wait .bx_wait_sub_title {
 	font-size: 30px;
-	margin:auto;
+	margin: auto;
 }
 
-.bx_wait_wrap .bx_wait .bx_wait_content .total_cnt{
-	margin-top:10px;
+.bx_wait_wrap .bx_wait .bx_wait_content .total_cnt {
+	margin-top: 10px;
 	font-size: 20px;
 	text-align: center;
-	
 }
+
 .bx_wait_wrap .bx_wait .bx_wait_content .total_cnt a {
 	text-decoration: none;
 }
@@ -61,16 +61,15 @@
 }
 
 .row {
-	margin: 15px;
-	height: 350px;
-	display: block;
+	height: 200px;
+	display: flex;
+	align-items: center;
+	justify-content: space-around;
 }
 
 .row .col {
-	width: 25%;
-	float:left;
-	padding: 0 15px 0 15px;
-	margin-bottom: 30px;
+	width: 50%;
+    padding: 0 15px;
 }
 
 .bg-aqua {
@@ -95,13 +94,15 @@
 
 .small-box {
 	border-radius: 3px;
-	box-shadow: 1px 1px 3px lightgray;
+    box-shadow: 1px 1px 3px lightgray;
+    height: 175px;
 }
 
-.small-box > .inner {
-    padding: 10px;
+.small-box>.inner {
+	padding: 10px;
     color: white;
-    width:70%;
+    width: 100%;
+    height: 145px;
 }
 
 .small-box-top {
@@ -109,43 +110,43 @@
 }
 
 .small-box h3 {
-    font-size: 38px;
-    font-weight: bold;
-    margin: 0 0 10px 0;
-    white-space: nowrap;
-    padding: 0;
+	font-size: 38px;
+	font-weight: bold;
+	margin: 0 0 10px 0;
+	white-space: nowrap;
+	padding: 0;
 }
 
 .small-box p {
-    font-size: 15px;
+	font-size: 20px;
 }
 
 .small-box .icon {
 	width: 30%;
-    transition: all .3s linear;
-    top: -10px;
-    right: 10px;
-    z-index: 0;
-    font-size: 90px;
-    color: rgba(0,0,0,0.15);
+	transition: all .3s linear;
+	top: -10px;
+	right: 10px;
+	z-index: 0;
+	font-size: 90px;
+	color: rgba(0, 0, 0, 0.15);
 }
 
 .small-box>.small-box-footer {
-    position: relative;
-    text-align: center;
-    padding: 3px 0;
-    color: #fff;
-    color: rgba(255,255,255,0.8);
-    display: block;
-    z-index: 10;
-    background: rgba(0,0,0,0.1);
-    text-decoration: none;
-    border-radius: 0 0 3px 3px;
+	position: relative;
+	text-align: center;
+	padding: 3px 0;
+	color: #fff;
+	color: rgba(255, 255, 255, 0.8);
+	display: block;
+	z-index: 10;
+	background: rgba(0, 0, 0, 0.1);
+	text-decoration: none;
+	border-radius: 0 0 3px 3px;
 }
 
 .small-box>.small-box-footer:hover {
-    color: #fff;
-    background: rgba(0,0,0,0.15);
+	color: #fff;
+	background: rgba(0, 0, 0, 0.15);
 }
 
 .section_wrap {
@@ -154,14 +155,13 @@
 
 .left_section {
 	width: 55%;
-	float:left;
+	float: left;
 }
 
 .right_section {
 	width: 41%;
 	float: right;
 }
-
 
 .section_content {
 	width: 100%;
