--- a/KosaESS/src/main/resources/templates/admin/lecture_list.html
+++ b/KosaESS/src/main/resources/templates/admin/lecture_list.html
@@ -93,6 +93,13 @@
 						</span>
 					</div>
 					<div class="content_info_button_wrap">
+						<!-- 엑셀 다운로드 버튼 -->
+						<button type="button" id="excel_btn"
+							onclick="location.href='/excel/admin/lecture'">
+							<img th:src="@{/img/excel.png}"><span>엑셀</span>
+						</button>
+						<!-- 엑셀 다운로드 버튼 -->
+						
 						<button class="insert_btn" type="button"
 							onclick="showInsertLecturePopup()" style="display: flex;">
 							<img th:src="@{/img/plus_white.png}" style="width: 20px;">
@@ -187,7 +194,7 @@
 			<!-- 강의 관리 -->
 		</div>
 		<!-- Content Middle-->
-		
+
 		<!-- Paging -->
 		<nav class="page_nav" aria-label="Page navigation">
 			<ul class="pagination">
