--- a/KosaESS/src/main/resources/templates/manager/manager_main.html
+++ b/KosaESS/src/main/resources/templates/manager/manager_main.html
@@ -28,7 +28,7 @@
 							<option th:each="class:${classList}" th:text="${class.clssNm}" th:value="${class.clssId}" />
 						</select>
 						<div style="display: flex; justify-content: center; width: 20%" >
-							<input type="button" style="width: 70%" value="검색">
+							<input type="button" style="width: 70%" value="조회">
 						</div>
 					</div>
 					<!-- 파이 차트 -->
