--- a/KosaESS/src/main/resources/templates/manager/student_list.html
+++ b/KosaESS/src/main/resources/templates/manager/student_list.html
@@ -82,7 +82,7 @@
 				<!-- 검색 버튼 -->
 				<div class="search_filter_btn_wrap">
 					<button class="search_reset_btn" th:id="resetButton" onclick="reset()"><img th:src="@{/img/reset_white.png}"><span>초기화</span></button>
-					<button class="search_filter_btn" th:id="searchButton" onclick="search()"><img th:src="@{/img/search_white.png}"><span>검색</span></button>
+					<button class="search_filter_btn" th:id="searchButton" onclick="search()"><img th:src="@{/img/search_white.png}"><span>조회</span></button>
 				</div>
 				<!-- End : 검색 버튼 -->
 			</div>
