--- a/KosaESS/src/main/resources/templates/manager/subsidy_insert.html
+++ b/KosaESS/src/main/resources/templates/manager/subsidy_insert.html
@@ -79,7 +79,7 @@
 					<span>&nbsp;명</span>
 				</div>
 				<div class="sbsd_button">
-					<button onclick="location.href='/manager/subsidy_insert'" class="sbsd_btn">선택 삭제</button>
+					<button onclick="deleteRow()" class="sbsd_btn"><img src="/img/minus_white.png"><span>선택 삭제</span></button>
 				</div>
 			</div>
 			<!-- End : 테이블 조작 -->
