--- a/KosaESS/src/main/resources/templates/manager/wlog_list.html
+++ b/KosaESS/src/main/resources/templates/manager/wlog_list.html
@@ -90,7 +90,7 @@
 			<!-- 검색 버튼 -->
 			<div class="search_btn_wrap">
 				<button id="search_reset_btn" onclick="reset()"><img th:src="@{/img/reset_white.png}"><span>초기화</span></button>
-				<button id="search_by_name_btn" onclick="search()"><img th:src="@{/img/search_white.png}"><span>검색</span></button>
+				<button id="search_by_name_btn" onclick="search()"><img th:src="@{/img/search_white.png}"><span>조회</span></button>
 			</div>
 			<!-- End : 검색 버튼 -->
 		</div>
