--- a/KosaESS/src/main/resources/templates/admin/insert_lecture_popup.html
+++ b/KosaESS/src/main/resources/templates/admin/insert_lecture_popup.html
@@ -136,7 +136,7 @@
 						} else if (response == "success") {
 							//성공하면 강의가 추가되었습니다. alert띄우고 location여기로 다시 이동
 							alert("강의가 등록되었습니다.");
-							opener.location.href = "/admin/lecture/list";
+							opener.location.href = "/admin/lecture/list/1";
 							self.close();//팝업창 닫기
 						}
 					}
