--- a/KosaESS/src/main/resources/static/css/admin/dashboard.css
+++ b/KosaESS/src/main/resources/static/css/admin/dashboard.css
@@ -69,7 +69,7 @@
 
 .row .col {
 	width: 50%;
-    padding: 0 15px;
+	padding: 0 15px;
 }
 
 .bg-aqua {
@@ -94,15 +94,15 @@
 
 .small-box {
 	border-radius: 3px;
-    box-shadow: 1px 1px 3px lightgray;
-    height: 175px;
+	box-shadow: 1px 1px 3px lightgray;
+	height: 175px;
 }
 
 .small-box>.inner {
 	padding: 10px;
-    color: white;
-    width: 100%;
-    height: 145px;
+	color: white;
+	width: 100%;
+	height: 145px;
 }
 
 .small-box-top {
@@ -168,4 +168,80 @@
 	height: 300px;
 	background: #ECF0F5;
 	margin: 15px 0 15px 0;
+}
+
+.more_btn {
+	text-align: center;
+	color: white;
+	font-weight: bold;
+	border: none;
+	margin: 2px;
+	border-radius: 3px;
+	padding: 5px;
+	display: flex;
+	cursor: pointer;
+	background: #0E5881;
+}
+
+.more_btn img {
+	width: 20px;
+}
+
+.inquiry_title, .subsidy_title{
+	display: flex;
+    align-items: flex-end;
+    justify-content: space-between;
+}
+
+.chart_title{
+	font-size:20px;
+}
+
+table {
+	width: 100%;
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+tr {
+	border-bottom: 1px solid #CFDEE6;
+	height: 30px;
+}
+
+tr th {
+	border: 1px solid #CFDEE6;
+}
+
+tr td {
+	border: 1px solid #CFDEE6;
+	padding: 5px;
+}
+
+tr td a {
+	text-decoration: none;
+	color: #0E5881;
+	font-weight: bold;
+}
+
+tr td a:hover {
+	color: #0E5881;
+	font-weight: bold;
+	text-decoration: underline;
+}
+
+.content_list_th {
+	background: #F3F6F8;
+	color: #0E5881;
+}
+
+.td_center{
+	text-align: center;
+}
+
+.chart_content_wrap > div{
+	width: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
 }
